--- a/ModernDesign_CSharp/ModernDesign_CSharp.csproj
+++ b/ModernDesign_CSharp/ModernDesign_CSharp.csproj
@@ -63,6 +63,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Core\ObservableObject.cs" />
+    <Compile Include="Core\RelayCommand.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -90,19 +92,18 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="ReadMe.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="NewFolder1 - Copy %282%29\" />
-    <Folder Include="NewFolder1 - Copy %283%29\NewFolder1 - Copy %282%29\" />
-    <Folder Include="NewFolder1 - Copy %283%29\NewFolder1 - Copy %283%29\" />
-    <Folder Include="NewFolder1 - Copy %283%29\NewFolder1 - Copy\" />
-    <Folder Include="NewFolder1 - Copy %283%29\NewFolder1\" />
-    <Folder Include="NewFolder1 - Copy %284%29\" />
-    <Folder Include="NewFolder1 - Copy\" />
-    <Folder Include="NewFolder1\" />
+    <Folder Include="Fonts\" />
+    <Folder Include="Images\" />
+    <Folder Include="MVVM\Model\" />
+    <Folder Include="MVVM\ViewModel\" />
+    <Folder Include="MVVM\View\" />
+    <Folder Include="Theme\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
